   Patch: James Turner, Jorge Arellano
+- Added support for numeric IPv6 addresses entered into the url bar.
 - Used the URL authority part instead of stripped default port in HTTP query.
   Patches: Justus Winter
+- Fix for file inputs without values (forms).
 - Tuned input width a bit.
 - Cleaned up resource embedding (forms)
 - Made cookierc parsing more robust.
   Patches: place (AKA corvid)
+- Switched SSL-enabled to configure.in (./configure --enable-ssl).
 - Standardised the installation of dpid/dpidrc with auto* tools.
 - Set the ScrollGroup as the resizable widget in downloads dpi.
 - Cleaned up and normalized D_SUN_LEN usage.
   Patches: Jeremy Henty
+- Allowed compilation with older machines by removing a few C99isms.
 - Added use of inttypes.h when stdint.h isn't found.
   Patches: Dan Fandrich
+- Reduced warnings with gcc-4.3.
   Patch: Thomas Orgis
+- Added the "middle_click_drags_page" dillorc option.
   Patch: Jorge Arellano, Thomas Orgis
+- Set the File menu label to hide when the File menu-button is shown.
 ? Trying a new iconv() test in configure.in.
   Patch: Jorge Arellano

dw

+- Cleaned up unused code in fltkviewbase.
   Patch: Johannes Hofmann

-----------------------------------------------------------------------------

dillo-2.0

+- Ported Dillo from GTK1 to FLTK2.
 - Ported a susbstantial part of the code from C to C++ (FLTK2 is in C++).
 - Wrote a new library: Dlib. With "Dlib" Dillo doesn't need glib anymore.
 - Ported all the code to Dlib.
 - Fixed Http_must_use_proxy() to be case insensitive.
 - Fixed some leaks and bugs in the cookies dpi.
 - Made Dillo's UI Control Panel resizable on-the-fly.
 - Implemented a new, simpler, dillorc parser.
 - Added handling of "localhost" in file URIs.
 - Fix: recognize "http://foo" and "http://foo/" as the same URL (BUG#497).
 - Reimplemented the Concomitant Callback chains into a uniform scheme!
   (two query branches and a single answer branch). It simplifies a lot the